PLF-1166: Use Tomcat's setenv.sh script